@@ -321,7 +321,7 @@ CGUIControl* CGUIControlFactory::Create(DWORD dwParentId, const TiXmlNode* pCont
     iPosY = pReference->GetYPosition();
     dwWidth = pReference->GetWidth();
     dwHeight = pReference->GetHeight();
-    if (strType == "label" || strType == "infolabel") // PRE1.3 support
+    if (strType == "label" || strType == "infolabel") // PRE1.3
     {
       strFont = ((CGUILabelControl*)pReference)->GetFontName();
       strLabel = ((CGUILabelControl*)pReference)->GetLabel();
@@ -338,7 +338,7 @@ CGUIControl* CGUIControlFactory::Create(DWORD dwParentId, const TiXmlNode* pCont
       dwAlign = ((CGUIEditControl*)pReference)->m_dwTextAlign;
       dwDisabledColor = ((CGUIEditControl*)pReference)->GetDisabledColor();
     }
-    else if (strType == "fadelabel" || strType == "infofadelabel")
+    else if (strType == "fadelabel" || strType == "infofadelabel") // PRE1.3
     {
       strFont = ((CGUIFadeLabelControl*)pReference)->GetFontName();
       dwTextColor = ((CGUIFadeLabelControl*)pReference)->GetTextColor();
@@ -509,7 +509,7 @@ CGUIControl* CGUIControlFactory::Create(DWORD dwParentId, const TiXmlNode* pCont
       strRight = ((CGUIProgressControl*)pReference)->GetBackTextureRightName();
       strOverlay = ((CGUIProgressControl*)pReference)->GetBackTextureOverlayName();
     }
-    else if (strType == "image" || strType == "infoimage")
+    else if (strType == "image" || strType == "infoimage") // PRE1.3
     {
       strTexture = ((CGUIImage *)pReference)->GetFileName();
       dwColorKey = ((CGUIImage *)pReference)->GetColorKey();
@@ -940,7 +940,7 @@ CGUIControl* CGUIControlFactory::Create(DWORD dwParentId, const TiXmlNode* pCont
   // Instantiate a new control using the properties gathered above
   //
 
-  if (strType == "label" || strType == "infolabel")
+  if (strType == "label" || strType == "infolabel") // PRE1.3
   {
     CGUILabelControl* pControl = new CGUILabelControl(
                                    dwParentId, dwID, iPosX, iPosY, dwWidth, dwHeight,
@@ -969,7 +969,7 @@ CGUIControl* CGUIControlFactory::Create(DWORD dwParentId, const TiXmlNode* pCont
 
     return pControl;
   }
-  else if (strType == "fadelabel" || strType == "infofadelabel")
+  else if (strType == "fadelabel" || strType == "infofadelabel") // PRE1.3
   {
     CGUIFadeLabelControl* pControl = new CGUIFadeLabelControl(
                                        dwParentId, dwID, iPosX, iPosY, dwWidth, dwHeight,
@@ -1173,7 +1173,7 @@ CGUIControl* CGUIControlFactory::Create(DWORD dwParentId, const TiXmlNode* pCont
     pControl->SetVisible(bVisible);
     return pControl;
   }
-  else if (strType == "image" || strType == "infoimage")
+  else if (strType == "image" || strType == "infoimage") // PRE1.3
   {
     CGUIImage* pControl = new CGUIImage(
                             dwParentId, dwID, iPosX, iPosY, dwWidth, dwHeight, strTexture, dwColorKey);
