@@ -62,7 +62,7 @@
 				FileName="$(TargetDir)default.xbe"
 				StackSize="0x60000"
 				IncludeDebugInfo="TRUE"
-				InsertFile=".\media\dsstdfx.bin,dsstdfx,r;$(TargetDir)YV12toRGB.xpu,PXLSHADER,R"
+				InsertFile=".\media\dsstdfx.bin,dsstdfx,r"
 				NoLibWarn="TRUE"
 				NoPreload="LIBXBMS;LIBSMB;CXIMAGE;ISO9660;PYTHON;PY_RW;LIBHTTP;LIBMP4;LIBXDAAP"
 				TitleID="0xFACE008"
@@ -176,7 +176,7 @@
 				FileName="$(TargetDir)default.xbe"
 				StackSize="0x80000"
 				IncludeDebugInfo="TRUE"
-				InsertFile=".\media\dsstdfx.bin,dsstdfx,r;$(TargetDir)YV12toRGB.xpu,PXLSHADER,R"
+				InsertFile=".\media\dsstdfx.bin,dsstdfx,r"
 				NoLibWarn="TRUE"
 				NoPreload="LIBXBMS;LIBSMB;CXIMAGE;ISO9660;PYTHON"
 				TitleID="0xFACE008"
@@ -247,7 +247,7 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 				Name="XboxImageTool"
 				FileName="$(TargetDir)default.xbe"
 				StackSize="0x80000"
-				InsertFile=".\media\dsstdfx.bin,dsstdfx,r;$(TargetDir)YV12toRGB.xpu,PXLSHADER,R"
+				InsertFile=".\media\dsstdfx.bin,dsstdfx,r"
 				NoPreload="LIBXBMS;LIBSMB;CXIMAGE;ISO9660;PYTHON;PY_RW;LIBHTTP"
 				TitleID="0xFACE008"
 				MediaTypes="0x80000007"
@@ -362,7 +362,7 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 				Name="XboxImageTool"
 				FileName="$(TargetDir)default.xbe"
 				StackSize="0x80000"
-				InsertFile=".\media\dsstdfx.bin,dsstdfx,r;$(TargetDir)YV12toRGB.xpu,PXLSHADER,R"
+				InsertFile=".\media\dsstdfx.bin,dsstdfx,r"
 				NoPreload="LIBXBMS;LIBSMB;CXIMAGE;ISO9660;PYTHON"
 				TitleID="0xFACE008"
 				MediaTypes="0x80000007"
@@ -418,7 +418,7 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 				FileName="$(TargetDir)default.xbe"
 				StackSize="0x60000"
 				IncludeDebugInfo="TRUE"
-				InsertFile=".\media\dsstdfx.bin,dsstdfx,r;$(TargetDir)YV12toRGB.xpu,PXLSHADER,R"
+				InsertFile=".\media\dsstdfx.bin,dsstdfx,r"
 				NoLibWarn="TRUE"
 				NoPreload="LIBXBMS;LIBSMB;CXIMAGE;ISO9660;PYTHON;PY_RW;LIBHTTP"
 				TitleID="0xFACE008"
@@ -2014,65 +2014,6 @@ bundler xbelogo\saveimage.rdf -o xbelogo\saveimage.xbx
 				</File>
 				<File
 					RelativePath=".\xbmc\cores\mplayer\XBoxRenderer.h">
-				</File>
-				<File
-					RelativePath=".\xbmc\cores\mplayer\YV12toRGB.pxl">
-					<FileConfiguration
-						Name="Debug|Xbox">
-						<Tool
-							Name="VCCustomBuildTool"
-							Description="$(InputFileName)"
-							CommandLine="xsasm /nologo /P &quot;$(InputPath)&quot; &quot;$(TargetDir)$(InputName).xpu&quot;"
-							Outputs="$(TargetDir)$(InputName).xpu"/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Profile|Xbox">
-						<Tool
-							Name="VCCustomBuildTool"
-							Description="$(InputFileName)"
-							CommandLine="xsasm /nologo /P &quot;$(InputPath)&quot; &quot;$(TargetDir)$(InputName).xpu&quot;"
-							Outputs="$(TargetDir)$(InputName).xpu"/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Profile_FastCap|Xbox">
-						<Tool
-							Name="VCCustomBuildTool"
-							Description="$(InputFileName)"
-							CommandLine="xsasm /nologo /P &quot;$(InputPath)&quot; &quot;$(TargetDir)$(InputName).xpu&quot;"
-							Outputs="$(TargetDir)$(InputName).xpu"/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release|Xbox">
-						<Tool
-							Name="VCCustomBuildTool"
-							Description="$(InputFileName)"
-							CommandLine="xsasm /nologo /P &quot;$(InputPath)&quot; &quot;$(TargetDir)$(InputName).xpu&quot;"
-							Outputs="$(TargetDir)$(InputName).xpu"/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release_LTCG|Xbox">
-						<Tool
-							Name="VCCustomBuildTool"
-							Description="$(InputFileName)"
-							CommandLine="xsasm /nologo /P &quot;$(InputPath)&quot; &quot;$(TargetDir)$(InputName).xpu&quot;"
-							Outputs="$(TargetDir)$(InputName).xpu"/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Release Xbox  Debugging|Xbox">
-						<Tool
-							Name="VCCustomBuildTool"
-							Description="$(InputFileName)"
-							CommandLine="xsasm /nologo /P &quot;$(InputPath)&quot; &quot;$(TargetDir)$(InputName).xpu&quot;"
-							Outputs="$(TargetDir)$(InputName).xpu"/>
-					</FileConfiguration>
-					<FileConfiguration
-						Name="Debug Xbox No Memory Tracking|Xbox">
-						<Tool
-							Name="VCCustomBuildTool"
-							Description="$(InputFileName)"
-							CommandLine="xsasm /nologo /P &quot;$(InputPath)&quot; &quot;$(TargetDir)$(InputName).xpu&quot;"
-							Outputs="$(TargetDir)$(InputName).xpu"/>
-					</FileConfiguration>
 				</File>
 			</Filter>
 			<Filter
